@@ -1,48 +1,88 @@
 package ru.yandex.practicum.filmorate.storage.film;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.context.annotation.Primary;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.jdbc.support.KeyHolder;
-import org.springframework.stereotype.Component;
-import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import org.springframework.stereotype.Repository;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.model.Mpa;
-import ru.yandex.practicum.filmorate.storage.mapper.FilmRowMapper;
-import ru.yandex.practicum.filmorate.storage.mapper.GenreRowMapper;
-import ru.yandex.practicum.filmorate.storage.mapper.MpaRowMapper;
+import ru.yandex.practicum.filmorate.storage.film.mapper.FilmRowMapper;
+import ru.yandex.practicum.filmorate.storage.MpaStorage;
 
-import java.sql.Date;
 import java.sql.PreparedStatement;
+import java.sql.Statement;
+import java.sql.Date;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
-@Component
-@RequiredArgsConstructor
+@Repository
+@Qualifier("filmDbStorage")
+@Primary
 public class FilmDbStorage implements FilmStorage {
+
+    // SQL константы для фильмов
+    private static final String SQL_INSERT_FILM = "INSERT INTO films (name, description, release_date, duration, mpa_rating_id) VALUES (?, ?, ?, ?, ?)";
+    private static final String SQL_UPDATE_FILM = "UPDATE films SET name = ?, description = ?, release_date = ?, duration = ?, mpa_rating_id = ? WHERE id = ?";
+    private static final String SQL_SELECT_ALL_FILMS = "SELECT * FROM films";
+    private static final String SQL_SELECT_FILM_BY_ID = "SELECT * FROM films WHERE id = ?";
+    private static final String SQL_DELETE_FILM = "DELETE FROM films WHERE id = ?";
+    private static final String SQL_COUNT_FILMS = "SELECT COUNT(*) FROM films";
+    private static final String SQL_EXISTS_FILM = "SELECT COUNT(*) FROM films WHERE id = ?";
+
+    // SQL константы для лайков
+    private static final String SQL_INSERT_LIKE = "INSERT INTO likes (film_id, user_id) VALUES (?, ?)";
+    private static final String SQL_DELETE_LIKE = "DELETE FROM likes WHERE film_id = ? AND user_id = ?";
+    private static final String SQL_SELECT_LIKES_FOR_FILM = "SELECT user_id FROM likes WHERE film_id = ?";
+    private static final String SQL_COUNT_LIKES_FOR_FILM = "SELECT COUNT(*) FROM likes WHERE film_id = ?";
+    private static final String SQL_SELECT_POPULAR_FILMS =
+            "SELECT f.*, COUNT(l.user_id) as likes_count " +
+            "FROM films f " +
+            "LEFT JOIN likes l ON f.id = l.film_id " +
+            "GROUP BY f.id " +
+            "ORDER BY likes_count DESC " +
+            "LIMIT ?";
+
+    // SQL константы для жанров
+    private static final String SQL_INSERT_FILM_GENRE = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
+    private static final String SQL_DELETE_FILM_GENRES = "DELETE FROM film_genres WHERE film_id = ?";
+    private static final String SQL_SELECT_GENRES_FOR_FILM =
+            "SELECT g.id, g.name FROM genres g " +
+            "JOIN film_genres fg ON g.id = fg.genre_id " +
+            "WHERE fg.film_id = ? ORDER BY g.id";
+    private static final String SQL_SELECT_GENRES_FOR_FILMS =
+            "SELECT fg.film_id, g.id, g.name FROM genres g " +
+            "JOIN film_genres fg ON g.id = fg.genre_id " +
+            "WHERE fg.film_id IN (%s) " +
+            "ORDER BY fg.film_id, g.id";
 
     private final JdbcTemplate jdbcTemplate;
     private final FilmRowMapper filmRowMapper;
-    private final GenreRowMapper genreRowMapper;
-    private final MpaRowMapper mpaRowMapper;
+    private final MpaStorage mpaStorage;
+
+    public FilmDbStorage(JdbcTemplate jdbcTemplate, FilmRowMapper filmRowMapper, MpaStorage mpaStorage) {
+        this.jdbcTemplate = jdbcTemplate;
+        this.filmRowMapper = filmRowMapper;
+        this.mpaStorage = mpaStorage;
+    }
 
     @Override
     public Film createFilm(Film film) {
-        String sql = "INSERT INTO films (name, description, release_date, duration, mpa_id) VALUES (?, ?, ?, ?, ?)";
-
         KeyHolder keyHolder = new GeneratedKeyHolder();
 
         jdbcTemplate.update(connection -> {
-            PreparedStatement ps = connection.prepareStatement(sql, new String[]{"film_id"});
+            PreparedStatement ps = connection.prepareStatement(SQL_INSERT_FILM, Statement.RETURN_GENERATED_KEYS);
             ps.setString(1, film.getName());
             ps.setString(2, film.getDescription());
             ps.setDate(3, Date.valueOf(film.getReleaseDate()));
             ps.setInt(4, film.getDuration());
-            ps.setInt(5, film.getMpa().getId());
+
+            int mpaId = film.getMpa() != null ? film.getMpa().getId() : 1;
+            ps.setInt(5, mpaId);
             return ps;
         }, keyHolder);
 
@@ -52,64 +92,63 @@ public class FilmDbStorage implements FilmStorage {
         }
 
         if (film.getGenres() != null && !film.getGenres().isEmpty()) {
-            saveFilmGenres(film.getId(), film.getGenres());
+            saveGenres(film.getId(), film.getGenres());
         }
 
-        loadMpaNameForFilm(film);
-
-        log.debug("Создан фильм с id: {}", film.getId());
         return film;
     }
 
     @Override
     public Film updateFilm(Film film) {
-        String sql = "UPDATE films SET name = ?, description = ?, release_date = ?, duration = ?, mpa_id = ? WHERE film_id = ?";
+        int mpaId = film.getMpa() != null ? film.getMpa().getId() : 1;
 
-        int updated = jdbcTemplate.update(sql,
+        jdbcTemplate.update(SQL_UPDATE_FILM,
                 film.getName(),
                 film.getDescription(),
                 Date.valueOf(film.getReleaseDate()),
                 film.getDuration(),
-                film.getMpa().getId(),
-                film.getId());
+                mpaId,
+                film.getId()
+        );
 
-        if (updated == 0) {
-            log.error("Фильм с id {} не найден при обновлении", film.getId());
-            throw new NotFoundException("Фильм с id " + film.getId() + " не найден");
+        deleteGenres(film.getId());
+        if (film.getGenres() != null && !film.getGenres().isEmpty()) {
+            saveGenres(film.getId(), film.getGenres());
         }
 
-        updateFilmGenres(film.getId(), film.getGenres());
-        loadMpaNameForFilm(film);
-
-        log.debug("Обновлен фильм с id: {}", film.getId());
         return film;
     }
 
     @Override
     public Collection<Film> findAllFilms() {
-        String sql = "SELECT f.*, m.mpa_name FROM films f " +
-                     "JOIN mpa_ratings m ON f.mpa_id = m.mpa_id";
+        List<Film> films = jdbcTemplate.query(SQL_SELECT_ALL_FILMS, filmRowMapper);
 
-        List<Film> films = jdbcTemplate.query(sql, filmRowMapper);
+        if (films.isEmpty()) {
+            return films;
+        }
 
         Map<Long, Set<Genre>> genresMap = loadGenresForFilms(films);
-        films.forEach(film -> film.setGenres(genresMap.getOrDefault(film.getId(), new LinkedHashSet<>())));
+
+        for (Film film : films) {
+            film.setGenres(genresMap.getOrDefault(film.getId(), new LinkedHashSet<>()));
+            enrichFilmWithMpaName(film);
+        }
 
         return films;
     }
 
     @Override
     public Optional<Film> getFilmById(Long id) {
-        String sql = "SELECT f.*, m.mpa_name FROM films f " +
-                     "JOIN mpa_ratings m ON f.mpa_id = m.mpa_id " +
-                     "WHERE f.film_id = ?";
-
         try {
-            Film film = jdbcTemplate.queryForObject(sql, filmRowMapper, id);
+            Film film = jdbcTemplate.queryForObject(SQL_SELECT_FILM_BY_ID, filmRowMapper, id);
+
             if (film != null) {
-                loadGenresForFilm(film);
+                film.setGenres(getGenresForFilm(id));
+                enrichFilmWithMpaName(film);
+                return Optional.of(film);
             }
-            return Optional.ofNullable(film);
+            return Optional.empty();
+
         } catch (EmptyResultDataAccessException e) {
             return Optional.empty();
         }
@@ -117,109 +156,65 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public boolean deleteFilm(Long id) {
-        String sql = "DELETE FROM films WHERE film_id = ?";
-        int deleted = jdbcTemplate.update(sql, id);
-        return deleted > 0;
+        return jdbcTemplate.update(SQL_DELETE_FILM, id) > 0;
     }
 
     @Override
     public boolean containsFilm(Long id) {
-        String sql = "SELECT COUNT(*) FROM films WHERE film_id = ?";
-        Integer count = jdbcTemplate.queryForObject(sql, Integer.class, id);
-        return count > 0;
+        Integer count = jdbcTemplate.queryForObject(SQL_EXISTS_FILM, Integer.class, id);
+        return count != null && count > 0;
     }
 
     @Override
     public int getFilmsCount() {
-        String sql = "SELECT COUNT(*) FROM films";
-        return jdbcTemplate.queryForObject(sql, Integer.class);
+        Integer count = jdbcTemplate.queryForObject(SQL_COUNT_FILMS, Integer.class);
+        return count != null ? count : 0;
     }
 
     @Override
     public void addLike(Long filmId, Long userId) {
-        String checkSql = "SELECT COUNT(*) FROM likes WHERE film_id = ? AND user_id = ?";
-        Integer count = jdbcTemplate.queryForObject(checkSql, Integer.class, filmId, userId);
-
-        if (count == 0) {
-            String sql = "INSERT INTO likes (film_id, user_id) VALUES (?, ?)";
-            jdbcTemplate.update(sql, filmId, userId);
-            log.debug("Лайк добавлен: фильм {}, пользователь {}", filmId, userId);
-        }
+        jdbcTemplate.update(SQL_INSERT_LIKE, filmId, userId);
     }
 
     @Override
     public void removeLike(Long filmId, Long userId) {
-        String sql = "DELETE FROM likes WHERE film_id = ? AND user_id = ?";
-        jdbcTemplate.update(sql, filmId, userId);
-        log.debug("Лайк удален: фильм {}, пользователь {}", filmId, userId);
+        jdbcTemplate.update(SQL_DELETE_LIKE, filmId, userId);
     }
 
     @Override
-    public int getLikesCount(Long filmId) {
-        String sql = "SELECT COUNT(*) FROM likes WHERE film_id = ?";
-        return jdbcTemplate.queryForObject(sql, Integer.class, filmId);
-    }
+    public Collection<Film> getMostPopularFilms(int count) {
+        List<Film> films = jdbcTemplate.query(SQL_SELECT_POPULAR_FILMS, filmRowMapper, count);
 
-    @Override
-    public Set<Long> getFilmLikes(Long filmId) {
-        String sql = "SELECT user_id FROM likes WHERE film_id = ?";
-        return new HashSet<>(jdbcTemplate.queryForList(sql, Long.class, filmId));
-    }
-
-    @Override
-    public Collection<Film> getMostPopularFilms(Integer limit) {
-        String sql = "SELECT f.*, m.mpa_name, COUNT(l.user_id) as likes_count " +
-                     "FROM films f " +
-                     "JOIN mpa_ratings m ON f.mpa_id = m.mpa_id " +
-                     "LEFT JOIN likes l ON f.film_id = l.film_id " +
-                     "GROUP BY f.film_id " +
-                     "ORDER BY likes_count DESC " +
-                     "LIMIT ?";
-
-        List<Film> films = jdbcTemplate.query(sql, filmRowMapper, limit);
+        if (films.isEmpty()) {
+            return films;
+        }
 
         Map<Long, Set<Genre>> genresMap = loadGenresForFilms(films);
-        films.forEach(film -> film.setGenres(genresMap.getOrDefault(film.getId(), new LinkedHashSet<>())));
+
+        for (Film film : films) {
+            film.setGenres(genresMap.getOrDefault(film.getId(), new LinkedHashSet<>()));
+            enrichFilmWithMpaName(film);
+        }
 
         return films;
     }
 
     @Override
-    public Mpa getMpaById(Integer id) {
-        String sql = "SELECT * FROM mpa_ratings WHERE mpa_id = ?";
-        try {
-            return jdbcTemplate.queryForObject(sql, mpaRowMapper, id);
-        } catch (EmptyResultDataAccessException e) {
-            log.error("MPA с id {} не найден", id);
-            throw new NotFoundException("Рейтинг MPA с id " + id + " не найден");
-        }
+    public int getLikesCount(Long filmId) {
+        Integer count = jdbcTemplate.queryForObject(SQL_COUNT_LIKES_FOR_FILM, Integer.class, filmId);
+        return count != null ? count : 0;
     }
 
-    private void saveFilmGenres(Long filmId, Set<Genre> genres) {
-        String sql = "INSERT INTO film_genres (film_id, genre_id) VALUES (?, ?)";
-
-        for (Genre genre : genres) {
-            jdbcTemplate.update(sql, filmId, genre.getId());
-        }
+    @Override
+    public Set<Long> getLikesForFilm(Long filmId) {
+        return new HashSet<>(jdbcTemplate.queryForList(SQL_SELECT_LIKES_FOR_FILM, Long.class, filmId));
     }
 
-    private void updateFilmGenres(Long filmId, Set<Genre> newGenres) {
-        String deleteSql = "DELETE FROM film_genres WHERE film_id = ?";
-        jdbcTemplate.update(deleteSql, filmId);
-
-        if (newGenres != null && !newGenres.isEmpty()) {
-            saveFilmGenres(filmId, newGenres);
+    private void enrichFilmWithMpaName(Film film) {
+        if (film.getMpa() != null) {
+            mpaStorage.findById(film.getMpa().getId())
+                    .ifPresent(mpa -> film.getMpa().setName(mpa.getName()));
         }
-    }
-
-    private void loadGenresForFilm(Film film) {
-        String sql = "SELECT g.* FROM genres g " +
-                     "JOIN film_genres fg ON g.genre_id = fg.genre_id " +
-                     "WHERE fg.film_id = ? " +
-                     "ORDER BY g.genre_id";
-
-        List<Genre> genres = jdbcTemplate.query(sql, genreRowMapper, film.getId());
-        film.setGenres(new LinkedHashSet<>(genres));
     }
 
     private Map<Long, Set<Genre>> loadGenresForFilms(List<Film> films) {
@@ -229,23 +224,51 @@ public class FilmDbStorage implements FilmStorage {
 
         List<Long> filmIds = films.stream()
                 .map(Film::getId)
-                .collect(Collectors.toList());
+                .toList();
 
-        String placeholders = String.join(",", Collections.nCopies(filmIds.size(), "?"));
-        String sql = "SELECT fg.film_id, g.* FROM genres g " +
-                     "JOIN film_genres fg ON g.genre_id = fg.genre_id " +
-                     "WHERE fg.film_id IN (" + placeholders + ") " +
-                     "ORDER BY g.genre_id";
+        String inSql = String.join(",", Collections.nCopies(filmIds.size(), "?"));
+        String sql = String.format(SQL_SELECT_GENRES_FOR_FILMS, inSql);
 
         Map<Long, Set<Genre>> genresMap = new HashMap<>();
 
-        jdbcTemplate.query(sql, rs -> {
+        jdbcTemplate.query(sql, (rs) -> {
             Long filmId = rs.getLong("film_id");
-            Genre genre = genreRowMapper.mapRow(rs, rs.getRow());
+            Genre genre = new Genre();
+            genre.setId(rs.getInt("id"));
+            genre.setName(rs.getString("name"));
 
             genresMap.computeIfAbsent(filmId, k -> new LinkedHashSet<>()).add(genre);
         }, filmIds.toArray());
 
         return genresMap;
+    }
+
+    private Set<Genre> getGenresForFilm(Long filmId) {
+        return new LinkedHashSet<>(jdbcTemplate.query(SQL_SELECT_GENRES_FOR_FILM, (rs, rowNum) -> {
+            Genre genre = new Genre();
+            genre.setId(rs.getInt("id"));
+            genre.setName(rs.getString("name"));
+            return genre;
+        }, filmId));
+    }
+
+    private void saveGenres(Long filmId, Set<Genre> genres) {
+        if (genres == null || genres.isEmpty()) {
+            return;
+        }
+
+        for (Genre genre : genres) {
+            if (genre != null && genre.getId() >= 1 && genre.getId() <= 6) {
+                try {
+                    jdbcTemplate.update(SQL_INSERT_FILM_GENRE, filmId, genre.getId());
+                } catch (Exception e) {
+                    log.error("Ошибка при сохранении жанра {} для фильма {}: {}", genre, filmId, e.getMessage());
+                }
+            }
+        }
+    }
+
+    private void deleteGenres(Long filmId) {
+        jdbcTemplate.update(SQL_DELETE_FILM_GENRES, filmId);
     }
 }
